--- a/index.Rmd
+++ b/index.Rmd
@@ -116,8 +116,8 @@ Two "textbooks" are required for this course:
 The *Stat 216 Coursepack* of in-class activities is available for purchase in the [MSU Bookstore](https://www.msubookstore.org/). You may purchase the coursepack in person, or you may purchase online and have the coursepack shipped to you. Students are expected to bring the coursepack to class each day and to complete the activities within the coursepack. Chapter 1 of the coursepack is provided here if you do not have the coursepack by your first day of class.  
 
 * [_STAT 216 Coursepack_: Preface](Coursepack-Preface.pdf)
-* [_STAT 216 Coursepack_: Chapter 1](https://math.montana.edu/courses/s216/Week1_Coursepack.pdf)
-* [_STAT 216 Coursepack_: Chapter 2](Stat216Coursepack-Chapter2.pdf)
+* [_STAT 216 Coursepack_: Chapter 1](Coursepack-Week1.pdf)
+* [_STAT 216 Coursepack_: Chapter 2](Coursepack-Week2.pdf)
 
 ### RStudio
 We will be using the statistical software [R](https://www.r-project.org/) through the IDE [RStudio](https://rstudio.com/products/rstudio/) for data visualization and statistical analyses. 
@@ -190,7 +190,7 @@ grades %>% ggplot(aes(x=location, y=percent)) +
 
 You will be expected to complete the assigned textbook reading and D2L videos using the reading guides provided in the coursepack prior to attending the in-class activity for each week. Concept check quiz questions will be embedded in the videos up through the due date. Up until the deadline, you can retake the video quizzes as many times as you like (the most recent grade will be recorded in D2L). *(Note that if you re-watch a video without taking the quiz, D2L will record a zero for that quiz, even if you took the quiz previously.)* After the due date, videos will still be available to review, but quiz questions will no longer be included in the video. 
 
-* Video quizzes are due **Sunday at 8pm Mountain Time each week**.
+* Video quizzes are due **Monday at 8am Mountain Time each week**.
 * The two lowest video grades will be dropped.
 
 ### Activities (10%)
@@ -199,15 +199,17 @@ Every Monday and Wednesday, you will meet with your classmates and instructor to
 
 * Activities must be completed in the Stat 216 Coursepack. **If you prefer to complete the activity on a pdf copy using a stylus-enabled device, please speak to your instructor, and he or she will provide you with a PDF copy of the coursepack.**
 * Activities will be checked for completion at the **beginning of the following class period**.
-* If you have an excused absence the day the activity is due (e.g., quarantine or ill), you may email your instructor a scanned copy of the completed activity for credit. This must be received by **8pm Mountain Time on the day the activity would be checked in class**.
+* If you have an excused absence the day the activity is due (e.g., quarantine or ill), you may email your section instructor a scanned copy of the completed activity for credit. This must be received by **8pm Mountain Time on the day the activity would be checked in class**.
 * The lowest activity grade will be dropped.
 
 ### Labs (15%)
 
 Every Friday, you will meet with your classmates and instructor to work through that day's coursepack Rstudio group lab.  The lab will reinforce the ideas learned in the activities completed Monday and Wednesday but with the use of Rstudio for exploring and analyzing data.  
 
-* Each group will turn in the completed lab to Gradescope. Labs are due **Friday at 8pm Mountain Time each week**.
+* Each group will turn in selected questions from the lab to Gradescope. Labs are due **Friday at 8pm Mountain Time each week**.
 * The lowest lab grade will be dropped.
+* Each student will also turn in each lab for completion at the **beginning of the following class period**.
+
 
 ### Assignments (15%)
 
@@ -222,16 +224,17 @@ There will be two midterm exams (worth 15% of the course grade each). Midterm ex
 
 #### _Group portion_:
 
-Group midterm exam 1 will be **September 29th**; Group midterm exam 2 will be **November 3rd**. 
+Group midterm exam 1 will be **February 16th**; Group midterm exam 2 will be **March 30th**. 
 
 * Group portions of the midterms are worth 20% of your midterm exam grade.
 * Group midterm exams are open book, open notes. 
 * You will be allowed a calculator on the group midterm exams. 
 * You **will** be required to use Rstudio on the group midterm exams.
+* **If you miss more than 33% of class days within a unit without communicating with your section instructor and group-mates, you must complete the group exam individually.**
 
 #### _Individual portion_:
 
-Individual midterm exam 1 will be **October 1st**; Individual midterm exam 2 will be **November 5th**. 
+Individual midterm exam 1 will be **February 18th**; Individual midterm exam 2 will be **April 1st**. 
 
 * Individual portions of the midterms will be worth 80% of your midterm exam grade.
 * Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
@@ -248,16 +251,17 @@ The group final exam will be taken in class during your normal in-class time. A 
 
 #### _Group portion_:
 
-Group final exam will be **December 10th (during normal class time)**. 
+Group final exam will be **May 6th (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
 * You will be allowed a calculator on the group final exam. 
 * You **will** be required to use Rstudio on the group final exam.
+* **If you miss more than 33% of class days in Unit 3 without communicating with your section instructor and group-mates, you must complete the group exam individually.**
 
 #### _Individual portion_:
 
-Individual final exam will be **December 16th, 6 - 7:50pm** 
+Individual final exam will be **at a time and date TBD**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
@@ -292,9 +296,9 @@ The grade cutoffs may be shifted _downward_ at the end of the semester based on 
 
 # Late work policies
 
-* **Videos**: You may take the in-video quizzes as many times as you like up until the due date --- the most recent quiz score will be the recorded grade for that video in D2L. Videos are available in D2L at least one week prior to the due date, so extensions on these quizzes are not given unless for extenuating circumstances that prevent the student from viewing the video for that entire period.
+* **Videos**: You may take the in-video quizzes as many times as you like up until the due date --- the most recent quiz score will be the recorded grade for that video in D2L. Videos are available in D2L at least one week prior to the due date, so extensions on these quizzes are not given unless extenuating circumstances that prevent the student from viewing the video for that entire period.
 
-* **Activities and Labs**: Attendance in this course is critical for success and is therefore required. The in-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. If you need to miss a class period due to illness, quarantine, or other extenuating circumstances, please email your instructor a picture or scan of your completed activity due that day by 8pm Mountain Time, and we can give you credit for your completed activity. If the activity is not received by 8pm Mountain Time on the day it is due, you will not receive credit unless for extenuating circumstances that prevented you from completing the activity for the entire week prior to the due date.  If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your instructor will determine an appropriate extension on the lab based on your individual circumstances.
+* **Activities and Labs**: Attendance in this course is critical for success and is therefore required. The in-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. If you need to miss a class period due to illness, quarantine, or other extenuating circumstances, please email your section instructor a picture or scan of your completed activity due that day by 8pm Mountain Time, and we can give you credit for your completed activity. If the activity is not received by 8pm Mountain Time on the day it is due, you will not receive credit unless extenuating circumstances that prevented you from completing the activity for the entire week prior to the due date.  If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
 
 * **Exams**: 
     - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to arrange to take the exam at home while being proctored via Zoom.
