Updated final exam

--- a/index.Rmd
+++ b/index.Rmd
@@ -261,7 +261,7 @@ Group final exam will be **May 6th (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual final exam will be **at a time and date TBD**. 
+Individual final exam will be **Thursday, May 12 from 12:00 - 1:50pm**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
