--- a/index.Rmd
+++ b/index.Rmd
@@ -251,7 +251,7 @@ The group final exam will be taken in class during your normal in-class time. A 
 
 #### _Group portion_:
 
-Group final exam will be **May 6th (during normal class time)**. 
+Group final exam will be **May 4th AND May 6th (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
