--- a/index.Rmd
+++ b/index.Rmd
@@ -93,7 +93,7 @@ Employ quantitative methods in symbolic systems such as, arithmetic, algebra, or
 Entrance to STAT 216 requires at least one of the following be met:
 
 - Grade of C- or better in a 100-level math course (or equivalent)
-- Grade of B or better in MATH 096
+- Grade of B or better  M090 or the M063/M090 co-requisite
 - Level 30 on the [Math Placement Exam](http://www.montana.edu/testing/MPLEX.html) or a combination of a good score on Math portion of SAT (540 or higher) or ACT (23 or higher) and/or good high school GPA
   + See the [Math Prerequisite Flowchart](http://www.math.montana.edu/undergrad/documents/MHiearchyFlowchart.pdf) for more details.
 
@@ -137,7 +137,7 @@ See the [Statistical Computing](https://mtstateintrostats.github.io/IntroStatTex
 
 - [**Gradescope**](https://www.gradescope.com/): Submit and review quizzes and assignments, review exam grades. For more details, see our [Gradescope Help for Students](http://www.math.montana.edu/courses/s216/GradescopeHelpForStudents.pdf) document
 
-- [**Math Learning Center**](http://www.math.montana.edu/undergrad/mlc/index.html): Free drop-in tutoring for 100- and 200-level math and stat courses.
+- [**Mathematics and Statistics Center**](https://math.montana.edu/undergrad/msc/index.html): Free drop-in tutoring for 100- and 200-level math and stat courses in Romney Hall 220.
 
  
  
