--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'STAT 216: Introduction to Statistics'
-author: 'Fall 2022 Syllabus'
+author: 'Spring 2023 Syllabus'
 output:
   html_document:
     theme: cerulean
@@ -42,8 +42,8 @@ Phone: (406) 994-6557
 ## Assistant Coordinator
 [**Melinda Yager**](http://www.math.montana.edu/directory/faculty/1582830/melinda-yager){target="_blank"}  
 email: melinda.yager@montana.edu  
-Office: Wilson 2-263  
-Phone: (406) 994-6557
+Office: Wilson 2-260  
+Phone: (406) 994-
 
 ---
 
@@ -58,9 +58,9 @@ Phone: (406) 994-5350
 
 # Course calendars
 
-* [STAT 216 calendar](calendars/F22-Stat216_Calendar.pdf)
+* [STAT 216 calendar](calendars/S23-Stat216_Calendar.pdf)
 * [MSU academic calendar](http://catalog.montana.edu/academiccalendar/)
-* [MSU finals week schedule](https://www.montana.edu/registrar/Schedules.html)
+* [MSU finals week schedule](https://www.montana.edu/registrar/Schedules.html) (be sure to view the **Final Week Common (Combined) Section Groupings**)
 
 ---
 
@@ -126,7 +126,7 @@ You will access this software through the MSU RStudio server: [rstudio.math.mont
 
 * Please note: Your netID password expires every 6 months.  It is HIGHLY recommended that you reset your netID password BEFORE attempting to login to the Rstudio server.  You can reset your netID password in the [MSU password portal](https://pwreset.montana.edu/react/).
 
-See the [Statistical Computing](https://mtstateintrostats.github.io/IntroStatTextbook/#stat-computing) section in the Welcome chapter of our textbook for alternative options for accessing RStudio.
+See the [Statistical Computing](https://mtstateintrostats.github.io/IntroStatTextbook/rstudio.html#alternative-options-for-accessing-rstudio) section in the Welcome chapter of our textbook for alternative options for accessing RStudio.
 
 
 ### Learning management tools
@@ -188,10 +188,10 @@ grades %>% ggplot(aes(x=location, y=percent)) +
 
 ### Videos (10%)
 
-You will be expected to complete the assigned textbook reading and we recommend using the reading guides provided in the coursepack prior to each Monday class.  Additionally, you need to view the required videos (as shown on the [STAT 216 calendar](calendars/F22-Stat216_Calendar.pdf)) and complete the video concept check quizzes found on Gradescope by **8am every Monday**. Up until the 8am Monday deadline, you can retake the video quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer. After the due date, videos will still be available to review, but the Gradescope video quiz will be closed. 
+You will be expected to complete the assigned textbook reading and we recommend using the reading guides provided in the coursepack prior to each Monday class.  Additionally, you need to view the required videos (as shown on the [STAT 216 calendar](calendars/S23-Stat216_Calendar.pdf)) and complete the video concept check quizzes found on Gradescope by **11:59pm every Sunday**. Up until the 11:59pm Sunday deadline, you can retake the video quizzes as many times as you like by clicking Resubmit in Gradescope to open and edit any question answer. After the due date, videos will still be available to review, but the Gradescope video quiz will be closed. 
 
-* Video quizzes are due **Monday at 8am Mountain Time each week**.
-* The two lowest video grades will be dropped.
+* Video quizzes are due **Sunday at 11:59pm Mountain Time each week**.
+* The lowest video grade will be dropped.
 
 ### Activities (10%)
 
@@ -211,6 +211,7 @@ Every Monday and Wednesday, you will meet with your classmates and instructor to
 Every Friday, you will meet with your classmates and instructor to work through that day's coursepack Rstudio group lab.  The lab will reinforce the ideas learned in the activities completed Monday and Wednesday but with the use of Rstudio for exploring and analyzing data.  
 
 * Each group will turn in selected questions from the lab to Gradescope. Labs are due **Friday at 8pm Mountain Time each week**.
+    - Exceptions: There will be no labs due on exam weeks or weeks with only two class meetings due to university holidays.
 * The lowest lab grade will be dropped.
 * Each student will also turn in each lab for completion at the **beginning of the following class period**.
 
@@ -228,7 +229,7 @@ There will be two midterm exams (worth 15% of the course grade each). Midterm ex
 
 #### _Group portion_:
 
-Group midterm exam 1 will be **September 21st**; Group midterm exam 2 will be **October 26th**. 
+Group midterm exam 1 will be **February 15th**; Group midterm exam 2 will be **March 29th**. 
 
 * Group portions of the midterms are worth 20% of your midterm exam grade.
 * Group midterm exams are open book, open notes. 
@@ -238,7 +239,7 @@ Group midterm exam 1 will be **September 21st**; Group midterm exam 2 will be **
 
 #### _Individual portion_:
 
-Individual midterm exam 1 will be **September 23rd**; Individual midterm exam 2 will be **October 28th**. 
+Individual midterm exam 1 will be **February 17th**; Individual midterm exam 2 will be **March 31st**. 
 
 * Individual portions of the midterms will be worth 80% of your midterm exam grade.
 * Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
@@ -257,7 +258,7 @@ The individual final exam is a common hour exam. **Understand that attending tha
 
 #### _Group portion_:
 
-Group final exam will be **December 7th and 9th (during normal class time)**. 
+Group final exam will be **May 3rd and 5th (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
@@ -267,7 +268,7 @@ Group final exam will be **December 7th and 9th (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **Tuesday, December 13th from 6:00 - 7:50pm**. 
+Individual common hour final exam will be **Tuesday, May 9th from 6:00 - 7:50pm**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
@@ -308,15 +309,15 @@ The grade cutoffs may be shifted _downward_ at the end of the semester based on 
 * **Activities and Labs**: Attendance in this course is critical for success and is therefore required. The in-class activity and lab grades are a proxy for attendance and engagement. Students are expected to be in class during in-class activities and labs to provide support to each other and their teammates while working through the material. We will not record or post lectures/asynchronous learning opportunities. Students get a “free pass” for up to three activities per Unit, no questions asked. Illnesses/emergencies/school-related absences are included in these three; if students have extraneous circumstances, they are encouraged to talk to their instructor. For illnesses or when students cannot attend class, we recommend that the student WebEx into class with their group (or any video conferencing tool of choice). Students attending class remotely can show their activity via WebEx for credit. WebEx should be set up by students’ teammates. If the student is uncomfortable asking, the instructor can facilitate that conversation (e.g., email the students’ teammates, cc’ing the student, and ask if anyone can setup a WebEx meeting for class). If you need to miss a lab due to illness, quarantine, or other extenuating circumstances, please email your section instructor and group-mates letting them know **prior to the lab meeting**.  You may participate in the lab via video conferencing if desired or you may complete the lab on your own.  If the latter, your section instructor will determine an appropriate extension on the lab based on your individual circumstances.
 
 * **Exams**: 
-    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to arrange to take the exam at home while being proctored via Zoom.
-    - If you are ill to the point of not being able to take the exam, please email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to arrange a time to take the exam remotely via Zoom when you are feeling better within the week of the exam.
+    - Students that are in quarantine but healthy enough to take the exam should email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  Group exams may be taken remotely and proctored via WebEx but all individual exams must be taken in person.
+    - If you are ill to the point of not being able to take the exam, please email Student Success Coordinator [Jade Schmidt](mailto: jade.schmidt2@montana.edu) to make alternative arrangements.  
     - Students who miss the exam without contacting the instructor prior to the exam will receive a zero on the exam.
     - Work is not a legitimate reason for an exam absence.
 
 ---
  
 # COVID-19 policies and health-related class absences
-Montana State University strongly recommends students, faculty and staff wear face masks in indoor public spaces, in accordance with the Centers for Disease Control recommendations. Montana State University encourages students, faculty and staff to take advantage of convenient, on-campus clinics for the COVID-19 vaccine. Schedule your appointment by going to [www.montana.edu/health/coronavirus](www.montana.edu/health/coronavirus).
+Montana State University strongly recommends students, faculty and staff wear face masks in indoor public spaces, in accordance with the Centers for Disease Control recommendations. Montana State University encourages students, faculty and staff to take advantage of convenient, on-campus clinics for the COVID-19 vaccine. 
 
 Please evaluate your own health status regularly and refrain from attending class and other on-campus events if you are ill.  MSU students who miss class due to illness will be given opportunities to access course materials online. You are encouraged to seek appropriate medical attention for treatment of illness.  In the event of contagious illness, please do not come to class or to campus to turn in work. Instead notify us by email about your absence as soon as practical, so that accommodations can be made.  Please note that documentation (a Doctor’s note) for medical excuses is not required.  MSU University Health Partners--as part their commitment to maintain patient confidentiality, to encourage more appropriate use of healthcare resources, and to support meaningful dialogue between instructors and students--does not provide such documentation.
 
@@ -351,7 +352,7 @@ Plagiarism is an act of academic misconduct, which carries with it consequences 
 
 **In STAT 216, students involved in plagiarism on assignments (all parties involved) will receive a zero grade on that assignment. The second offense will result in a zero on that assignment, and the incident will be reported to the Dean of Students. Academic misconduct on an exam will result in a zero on that exam and will be reported to the Dean of Students, without exception.**
 
-[More information about Academic Misconduct from the Dean of Students](https://www.montana.edu/deanofstudents/syllabus.html)
+[More information about Academic Misconduct from the Dean of Students](https://www.montana.edu/deanofstudents/academicmisconduct/academicmisconduct.html)
 
 ---
 
@@ -359,4 +360,4 @@ Plagiarism is an act of academic misconduct, which carries with it consequences 
 
 This syllabus, course lectures and presentations, and any course materials provided throughout this term are protected by U.S. copyright laws.  Students enrolled in the course may use them for their own research and educational purposes.  However, reproducing, selling or otherwise distributing these materials without written permission of the copyright owner is expressly prohibited, including providing materials to commercial platforms such as Chegg or CourseHero.  Doing so may constitute a violation of U.S. copyright law as well as MSU’s Code of Student Conduct.
 
-[More information about Academic Misconduct from the Dean of Students](https://www.montana.edu/deanofstudents/syllabus.html)
+
