--- a/index.Rmd
+++ b/index.Rmd
@@ -226,7 +226,7 @@ There will be two midterm exams (worth 20% of the course grade each). Midterm ex
 
 #### _Group portion_:
 
-Group midterm exam 1 will be **February 15th**; Group midterm exam 2 will be **March 29th**. 
+Group midterm exam 1 will be **September 20th**; Group midterm exam 2 will be **Octobter 25th**. 
 
 * Group portions of the midterms are worth 20% of your midterm exam grade.
 * Group midterm exams are open book, open notes. 
@@ -236,7 +236,7 @@ Group midterm exam 1 will be **February 15th**; Group midterm exam 2 will be **M
 
 #### _Individual portion_:
 
-Individual midterm exam 1 will be **February 17th**; Individual midterm exam 2 will be **March 31st**. 
+Individual midterm exam 1 will be **September 22nd**; Individual midterm exam 2 will be **October 27th**. 
 
 * Individual portions of the midterms will be worth 80% of your midterm exam grade.
 * Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
@@ -255,7 +255,7 @@ The individual final exam is a common hour exam. **Understand that attending tha
 
 #### _Group portion_:
 
-Group final exam will be **May 3rd and 5th (during normal class time)**. 
+Group final exam will be **December 6th and 8th (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
@@ -265,7 +265,7 @@ Group final exam will be **May 3rd and 5th (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **Tuesday, May 9th from 12:00 - 1:50pm**. 
+Individual common hour final exam will be **Thursday, December 14th from 6:00 - 7:50pm**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
