Added final exam date and time

--- a/index.Rmd
+++ b/index.Rmd
@@ -275,7 +275,7 @@ Group final exam will be **May 1st and 3rd (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual common hour final exam date and time will be **published by the Registrar soon**. 
+Individual common hour final exam will be **Tuesday, May 7th from 6:00 - 7:50 PM**. 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
 * No potential final exam questions will be released.
