--- a/index.Rmd
+++ b/index.Rmd
@@ -243,6 +243,8 @@ Individual midterm exam 1 will be **September 18th**; Individual midterm exam 2 
 * You will be allowed a calculator on the midterm exams. 
 * You will **not** be required to use Rstudio on the midterm exams.
 
+The Monday following each exam, we will have a 15-minute exam reflection.  This will consist of questions from your exam which you will answer in your assigned groups.  The exam reflections will count as 5% of your midterm exam grade.  **If a student misses more than 3 classes within a unit, they will be required to complete the exam reflection on their own.**
+
 
 ### Final exam (30%)
 
