--- a/index.Rmd
+++ b/index.Rmd
@@ -264,7 +264,7 @@ Group final exam will be **December 4th and 6th (during normal class time)**.
 
 #### _Individual portion_:
 
-Individual common hour final exam will be **TBD (set by the Registrar, be sure to check the Common Hour Final listings!)**. 
+Individual common hour final exam will be **Tuesday, December 10th from 6:00 to 7:50 pm**. 
 
 * The individual portion of the final exam will be worth 80% of your final exam grade.
 * No potential final exam questions will be released.
